--- a/src/_dev/item.html
+++ b/src/_dev/item.html
@@ -71,7 +71,7 @@
                   <li class="item__li">кирка «Счастливые лезвия»</li>
                 </ul>
               </div>
-              <p class="item__sum">1129 Р <sup>1129 Р</sup></p>
+              <p class="item__price">1129 Р <sup>1129 Р</sup></p>
               <a href="#" class="item__btn button"> КУПИТЬ </a>
             </div>
           </div>
