--- a/src/_dev/item2.html
+++ b/src/_dev/item2.html
@@ -105,7 +105,7 @@
                 </ul>
               </div>
               <div class="item__flex d-flex">
-                <p class="item__sum">1129 Р <sup>1129 Р</sup></p>
+                <p class="item__price">1129 Р <sup>1129 Р</sup></p>
                 <div class="item__logos d-flex">
                   <div class="item__block">
                     <img src="img/pay1.png" alt="" />
