more styles, fonts, colors optimizations

--- a/src/_dev/item.html
+++ b/src/_dev/item.html
@@ -47,7 +47,7 @@
         <div class="container">
           <h1>НАБОР <<ТЕХНОЛИГА>></h1>
           <div class="item__box d-flex">
-            <img src="img/item.png" alt="" class="item__pic" />
+            <img src="img/item.png" alt="" class="item__image" />
             <div class="item__content">
               <div class="item__el">
                 <p class="item__name">Описание:</p>
