--- a/src/_dev/item2.html
+++ b/src/_dev/item2.html
@@ -53,16 +53,16 @@
           <div class="item__box d-flex">
             <div class="item__left">
               <div class="item__slider">
-                <a class="item__pic" data-fancybox="gallery" href="img/item.png">
+                <a class="item__image" data-fancybox="gallery" href="img/item.png">
                   <img src="img/item.png" alt="" />
                 </a>
-                <a class="item__pic" data-fancybox="gallery" href="img/item.png">
+                <a class="item__image" data-fancybox="gallery" href="img/item.png">
                   <img src="img/item.png" alt="" />
                 </a>
-                <a class="item__pic" data-fancybox="gallery" href="img/item.png">
+                <a class="item__image" data-fancybox="gallery" href="img/item.png">
                   <img src="img/item.png" alt="" />
                 </a>
-                <a class="item__pic" data-fancybox="gallery" href="img/item.png">
+                <a class="item__image" data-fancybox="gallery" href="img/item.png">
                   <img src="img/item.png" alt="" />
                 </a>
               </div>
